syntax = "proto3";

package colav;

message AgentUpdate {
    string mission_tag = 1;
    string agent_tag = 2;
    message Pose {
        message Position {
            float x = 1;
            float y = 2;
            float z = 3;
        }
        message Orientation {
            float x = 1;
            float y = 2;
            float z = 3;
            float w = 4;
        }
        Position position = 1;
        Orientation orientation = 2;
    }
    message State {
        Pose pose = 1;
        float velocity = 2;
        float yaw_rate = 3;
        float acceleration = 4;
    }
    State state = 3;
    string timestamp = 4;
}