syntax = "proto3";

package colav;

message ControllerFeedback {
    string mission_tag = 1;
    string agent_tag = 2;

    message CmdVelYaw {
        float velocity = 1;
        float yaw_rate = 2;
    }

    enum CTRLMode {
        UNKNOWN = 0;  // Renamed from UNKOWN to UNKNOWN
        CRUISE = 1;
        T2LOS = 2;
        T2Theta = 3;
        FB = 4;
        WAYPOINT_REACHED = 5;
    }

    enum CTRLStatus {
        UNKNOWN_STATUS = 0;  // Renamed from UNKOWN to UNKNOWN_STATUS
        ACTIVE = 1;
        INACTIVE = 2;
        ERROR = 3;
    }

    CTRLMode ctrl_mode = 3;
    CTRLStatus ctrl_status = 4;
    CmdVelYaw ctrl_cmd = 5;
    string timestamp = 6;
}
