syntax = "proto3";

package colav;

message MissionResponse {
    string tag = 1;
    string timestamp = 2;

    message MissionResponseDetails {
        enum MissionResponseEnum { 
            UNKNOWN = 0;
            MISSION_STARTING = 1;
            MISSION_ERROR = 2;
            MISSION_INVALID = 3;
        }
        MissionResponseEnum response = 1;
        string response_details = 2;
    }
    MissionResponseDetails response = 3;
}