syntax = "proto3";

package colav;

message ObstaclesUpdate { 
    enum DynamicObstacleType {
        DYNAMIC_UNSPECIFIED=0;
        VESSEL=1;
    }

    enum StaticObstacleType {
        STATIC_UNSPECIFIED=0;
        LAND_MASS=1;
        BUOY=2;
    }
    
    message Point {
        float x = 1;
        float y = 2;
        float z = 3;
    }

    message Quaternion {
        float x = 1;
        float y = 2;
        float z = 3;
        float w = 4;
    }

    message Pose {
        Point position = 1;
        Quaternion orientation = 2;
    }

    message State {
        Pose pose = 1;
        float velocity = 2;
        float yaw_rate = 3;
    }

    message DynamicObstacleGeometry {
        float loa = 1;
        float beam = 2;
        float safety_radius = 3;
    }

    message StaticObstacleGeometry {
        repeated Point polyshape_points = 1;
        float inflation_radius = 2;
    }

    message DynamicObstacle {
        string tag = 1;
        DynamicObstacleType type = 2;
        State state = 3;
        DynamicObstacleGeometry geometry = 4;
    }

    message StaticObstacle {
        string tag = 1;
        StaticObstacleType type = 2; 
        Pose pose = 3;
        StaticObstacleGeometry geometry = 4;
    }

    string mission_tag = 1;
    repeated DynamicObstacle dynamic_obstacles = 2;
    repeated StaticObstacle static_obstacles = 3;
    string timestamp = 4;
}